# deepface

./: Dockerfile  README.md  pyproject.toml  requirements_docker.txt  requirements_old.txt  setup.py
.devcontainer/: devcontainer.json
.devcontainer/tensorflow_gpu/: devcontainer.json
.github/workflows/: tests.yml
Tensorflow-Docker/: requirements.txt  requirements_additional.txt
deepface/: DeepFace.py
deepface/api/src/modules/core/: routes.py  service.py
deepface/commons/: folder_utils.py  image_utils.py  locally_connected2d.py  locally_connected_utils.py  package_utils.py  weight_utils.py
deepface/models/: Demography.py  Detector.py  FacialRecognition.py
deepface/models/demography/: Age.py  Emotion.py  Gender.py  Race.py
deepface/models/face_detection/: CenterFace.py  Dlib.py  FastMtCnn.py  MediaPipe.py  MtCnn.py  OpenCv.py  RetinaFace.py  Ssd.py  Yolo.py  YuNet.py
deepface/models/facial_recognition/: ArcFace.py  DeepID.py  Dlib.py  Facenet.py  FbDeepFace.py  GhostFaceNet.py  OpenFace.py  SFace.py  VGGFace.py
deepface/models/spoofing/: FasNet.py
deepface/modules/: demography.py  detection.py  modeling.py  preprocessing.py  recognition.py  representation.py  streaming.py  verification.py
tests/: face-recognition-how.py  overlay.py  test_analyze.py  test_api.py  test_enforce_detection.py  test_extract_faces.py  test_find.py  test_find_batched.py  test_represent.py  test_verify.py
