[project]
name = "deepface"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas (>=2.0.0,<3.0.0)",
    "libcudf-cu12 (==24.10.1)",
    "cudf-cu12 (==24.10.1)",
    "cvcuda-cu12 @ https://github.com/CVCUDA/CV-CUDA/releases/download/v0.14.0-beta/cvcuda_cu12-0.14.0-cp310.cp311.cp38.cp39-cp310.cp311.cp38.cp39-manylinux2014_x86_64.manylinux_2_17_x86_64.whl",
    "opencv-contrib-python @ https://github.com/cudawarped/opencv-python-cuda-wheels/releases/download/4.10.0.84/opencv_contrib_python-4.10.0.84-cp37-abi3-linux_x86_64.whl",
    "tqdm (>=4.67.1,<5.0.0)",
    "nvidia-nvimgcodec-cu12 (>=0.5.0.13,<0.6.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "onnx (==1.17.0)",
    "jax[cuda] (==0.4.35)",
    "mtcnn (>=1.0.0,<2.0.0)",
    "ultralytics (>=8.3.146,<9.0.0)",
    "dlib (>=20.0.0,<21.0.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "retina-face (==0.0.17)",
    "tensorrt (==10.8.0.43)",
    "cuda-python (==12.5.0)",
    "cuda-bindings (>=12.9.0,<13.0.0)",
    "pylibcudf-cu12 (==24.10.1)",
    "numpy (>=1.26.4, <2.2.0)",
    "tf2onnx @ file:///mnt/NVME_970/ImageSortAttempt/ThirdParty/deepface/tf2onnx-1.17.2-py3-none-any.whl",
    "tensorflow @ file:///mnt/NVME_970/ImageSortAttempt/ThirdParty/deepface/tensorflow-2.20.0-cp310-cp310-linux_x86_64.whl",
    "nvidia-cufft-cu12 (==11.4.1.4)",
    "nvidia-cublas-cu12 (==12.9.1.4)",
    "nvidia-cudnn-cu12 (==9.3.0.75)",
    "nvidia-nvjitlink-cu12 (==12.5.82)",
    "nvidia-cuda-cupti-cu12 (==12.5.39)",
    "nvidia-cuda-runtime-cu12 (==12.5.82)",
    "nvidia-cuda-nvcc-cu12 (==12.5.40)",
    "nvidia-cusparse-cu12 (==12.5.1.3)",
    "tensorrt-cu12-libs (==10.8.0.43)",
    "tensorrt-cu12-bindings (==10.8.0.43)",
    "keras (==3.10.0)",
    "pynvvideocodec (>=2.0.0,<3.0.0)",
    "nvidia-nvjpeg-cu12 (>=12.4.0.76,<13.0.0.0)",
    "nvidia-nvjpeg2k-cu12 (>=0.8.1.40,<0.9.0.0)",
    "nvidia-nvtiff-cu12 (>=0.5.0.67,<0.6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi-nvidia"
url = "https://pypi.nvidia.com/"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "ngc"
url = "https://pypi.ngc.nvidia.com"
priority = "supplemental"

